# svg_path_transform

./: .gitignore  LICENSE  README.md  setup.cfg  setup.py
.github/workflows/: publish.yml
svg_path_transform/: __init__.py  __main__.py  __version__.py  _cli.py  _morph.py  _parser.py  _segmentize.py  _transform.py  _translate_and_scale.py  path.lark
tests/: test_morph.py  test_segmentize.py
