[pycodestyle]
max-line-length = 100

[flake8]
max-line-length = 100

[metadata]
name = svg_path_transform
author = igrmk
author_email = igrmkx@gmail.com
description = SVG path data transformation toolkit
long_description_content_type = text/markdown
url = https://github.com/igrmk/svg_path_transform
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages=find:
python_requires = >= 3.6
include_package_data = True
install_requires =
    lark >= 0.11.3
    importlib_metadata; python_version < "3.8"

[options.entry_points]
console_scripts = svg_path_transform = svg_path_transform._cli:_main

[options.package_data]
* = *.lark
